--- a/src/pages/Login.css
+++ b/src/pages/Login.css
@@ -16,7 +16,7 @@
     font-weight: normal;
   }
   span.icon {
-    background: url('../../public/images/btn_google_signin_dark_pressed_web.png') transparent 5px 50% no-repeat;
+    background: url('../../public/images/1.png') transparent 5px 50% no-repeat;
     display: inline-block;
     vertical-align: middle;
     width: 42px;
