--- a/src/components/ChoreList.css
+++ b/src/components/ChoreList.css
@@ -1,3 +1,10 @@
+.inner-chore-container {
+  display: grid;
+  grid-template: 1fr 1fr 1fr / 1fr 1fr 1fr;
+}
+
+
+
 /* .display {
 display: flex;
 } */
@@ -14,7 +21,7 @@ display: flex;
     
   } */
 
-.container{
+/* .container{
     display: flex;
     align-items: center;
     width: 80%;
@@ -49,4 +56,4 @@ display: flex;
     text-decoration: none;
     color: rgb(139, 34, 38);
     font-size: 16px;
-  }
+  } */
