add css to login page

--- a/src/pages/Login.css
+++ b/src/pages/Login.css
@@ -1,4 +1,4 @@
-#customBtn {
+/* #customBtn {
     display: inline-block;
     background: white;
     color: #444;
@@ -30,5 +30,42 @@
     font-size: 14px;
     font-weight: bold;
     /* Use the Roboto font that is loaded in the <head> */
-    font-family: 'Roboto', sans-serif;
+    /* font-family: 'Roboto', sans-serif; */
+  /* } */ 
+
+  img {
+    display: block;
+    margin: 0 auto;
+    width: 200px;
+    height: 200px;
+    margin-top: 50px;
   }
+  
+  p {
+    text-align: center;
+    font-size: 18px;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+    line-height: 1.5;
+  }
+  
+  #gSignInWrapper {
+    display: flex;
+    justify-content: center;
+  }
+  
+  button {
+    background-color: #4CAF50;
+    color: white;
+    padding: 16px 20px;
+    border: none;
+    cursor: pointer;
+    width: 100px;
+    border-radius: 5px;
+    text-align: center;
+    margin-top: 20px;
+  }
+  
