--- a/src/pages/Login.css
+++ b/src/pages/Login.css
@@ -32,7 +32,7 @@
     /* Use the Roboto font that is loaded in the <head> */
     /* font-family: 'Roboto', sans-serif; */
   /* } */ 
-
+  
   img {
     display: block;
     margin: 0 auto;
@@ -42,15 +42,24 @@
   }
   
   p {
+    /* color: red; */
     text-align: center;
     font-size: 18px;
-    margin-top: 50px;
-    margin-bottom: 50px;
-    width: 80%;
-    margin-left: auto;
-    margin-right: auto;
-    line-height: 1.5;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    width: 8em;
+    margin-left: 100px;
+    margin-right: 100px;
+    line-height: 2;
   }
+  
+  p.text-center {
+   width: 50%;
+   text-align: center;
+   margin-left: auto;
+    margin-right: auto;
+  }
+
   
   #gSignInWrapper {
     display: flex;
@@ -58,7 +67,7 @@
   }
   
   button {
-    background-color: #4CAF50;
+    background-color:rgba(54,108,226,1);
     color: white;
     padding: 16px 20px;
     border: none;
