--- a/src/components/FamilyList.css
+++ b/src/components/FamilyList.css
@@ -16,7 +16,7 @@
 }
 
 .button {
-    background-color:rgba(54,108,226,1);
+    background-color:darkolivegreen;
     color: white;
     padding: 16px 20px;
     border: none;
