--- a/src/components/NewFamilyMemberForm.css
+++ b/src/components/NewFamilyMemberForm.css
@@ -29,9 +29,8 @@
 
   button[type="submit"] {
     margin-left: 3rem;
-    
     padding: 0.75rem 1.5rem;
-    background-color: #4CAF50;
+    background-color: darkolivegreen;
     color: white;
     border: none;
     border-radius: 5px;
