--- a/src/pages/AddFamilyMember.css
+++ b/src/pages/AddFamilyMember.css
@@ -7,19 +7,33 @@
    
 } */
 .container {
-   
     margin-top: 60px; 
     display:grid;
-    grid-template-columns:2fr 2fr 1fr ;
+    grid-template:auto auto auto/ auto auto auto;
+    
 }
 
+h3 {
+    /* border-style: dashed; */
+    color:darkolivegreen;
+    grid-row:1/2;
+    grid-column:1/5;
+    text-align: center;
+    justify-items: center;
+}
+
+
 .family-form {
-    grid-column:2/5;
+    /* border-style: dashed; */
+    grid-row:2/3;
+    grid-column:1/4;
     margin-right: 50px;
 }
 
 .family-list {
+    /* border-style: dashed; */
+    grid-row:2/3;
     margin-top:50px;
-    grid-column:5/6;
+    grid-column:4/5;
 
 }
