--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,17 +1,18 @@
 .homeContainer {
     display:grid;
-    grid-template:auto auto auto / auto auto auto;
+    grid-template:2fr 1fr ;
 }
 
 .nav {
     background-color: rgb(173, 173, 56);
+    /* border:dashed; */
     grid-row: 1/2;
     grid-column: 1/3;
 
 }
 
 .points {
-    grid-row: 2/3;
+    grid-row: 2/4;
     grid-column: 2/3;
 }
 
@@ -24,3 +25,5 @@
     grid-row: 3/5;
     grid-column: 2/3;
 }
+
+
