--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -4,26 +4,47 @@
 }
 
 .nav {
-    background-color: rgb(173, 173, 56);
+    background-color: rgb(128, 151, 89);
     /* border:dashed; */
     grid-row: 1/2;
-    grid-column: 1/3;
+    grid-column:3/4;
+    justify-content: end;
+    padding-right: 30px;
+    padding-top: 20px;
+    
 
 }
 
 .points {
-    grid-row: 2/4;
-    grid-column: 2/3;
+    grid-row: 2/3;
+    grid-column: 3/4;
+    margin-top: 30px;
+    margin-bottom: 30px;
 }
 
 .choreList {
-    grid-row: 2/5;
-    grid-column: 1/2;
+    grid-row: 2/4;
+    grid-column: 1/3;
 }
 
 .newChoreForm {
-    grid-row: 3/5;
-    grid-column: 2/3;
+    grid-row: 4/5;
+    grid-column: 3/4;
+    margin-top: 100px;
 }
 
 
+.welcome{
+    background-color: rgb(128, 151, 89);
+    /* border:dashed; */
+    grid-row: 1/2;
+    grid-column: 1/3;
+    text-align: left;
+    padding-left: 30px;
+    padding-top: 10px;
+}
+.choresToDo {
+    grid-row: 3/4;
+    grid-column: 3/4;
+    /* margin-bottom: 150px; */
+}
