--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,25 +1,32 @@
 .homeContainer {
     display:grid;
-    grid-template:2fr 1fr ;
+    grid-template-columns:3fr 2fr ;
+    align-items: start;
+    justify-items: start;
+    padding: 5rem 2rem;
 }
 
 .nav {
     background-color: rgb(128, 151, 89);
     /* border:dashed; */
-    grid-row: 1/2;
-    grid-column:3/4;
-    justify-content: end;
-    padding-right: 30px;
-    padding-top: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 1rem;
     
 
 }
 
-.points {
-    grid-row: 2/3;
-    grid-column: 3/4;
-    margin-top: 30px;
-    margin-bottom: 30px;
+.layout {
+    width: 100%;
+    
+    justify-self: end;
+} 
+.layout p{
+    display: inline-block;
+    width: 50%;
+    margin:0;
+    margin:0 0 1rem 0;
 }
 
 .choreList {
