--- a/src/pages/Login.css
+++ b/src/pages/Login.css
@@ -1,37 +1,4 @@
-/* #customBtn {
-    display: inline-block;
-    background: white;
-    color: #444;
-    width: 190px;
-    border-radius: 5px;
-    border: thin solid #888;
-    box-shadow: 1px 1px 1px grey;
-    white-space: nowrap;
-  }
-  #customBtn:hover {
-    cursor: pointer;
-  }
-  span.label {
-    font-family: serif;
-    font-weight: normal;
-  }
-  span.icon {
-    background: url('../../public/images/1.png') transparent 5px 50% no-repeat;
-    display: inline-block;
-    vertical-align: middle;
-    width: 42px;
-    height: 42px;
-  }
-  span.buttonText {
-    display: inline-block;
-    vertical-align: middle;
-    padding-left: 42px;
-    padding-right: 42px;
-    font-size: 14px;
-    font-weight: bold;
-    /* Use the Roboto font that is loaded in the <head> */
-    /* font-family: 'Roboto', sans-serif; */
-  /* } */ 
+
   
   img {
     display: block;
@@ -45,11 +12,12 @@
     /* color: red; */
     text-align: center;
     font-size: 18px;
-    margin-top: 20px;
-    margin-bottom: 20px;
+    margin-top: 50px;
+    margin-bottom: 100px;
     width: 8em;
     margin-left: 100px;
     margin-right: 100px;
+
     line-height: 2;
   }
   
@@ -58,6 +26,9 @@
    text-align: center;
    margin-left: auto;
     margin-right: auto;
+   font-family:'Times New Roman', Times, serif;
+   font-weight:bolder;
+   font-size:x-large;
   }
 
   
@@ -66,7 +37,7 @@
     justify-content: center;
   }
   
-  button {
+/* .btn-signInForm button {
     background-color:rgba(54,108,226,1);
     color: white;
     padding: 16px 20px;
@@ -77,6 +48,6 @@
     text-align: center;
     margin-top: 20px;
   }
-  
+   */
 
   
