--- a/src/components/ChoresToDo.css
+++ b/src/components/ChoresToDo.css
@@ -10,9 +10,9 @@
     display: flex;
     /* align-items: top; */
   }
-  .list-style{
-    list-style-type: none;
-  }
+  /* .list-style{
+    list-style-type:square;
+  } */
   .tasks__item__toggle:hover {
     background-color: rgba(0, 0, 0, 0.1);
     border-color: rgba(0, 0, 0, 0.15);
