--- a/src/components/ChoresToDo.css
+++ b/src/components/ChoresToDo.css
@@ -1,43 +1,72 @@
 .tasks__item__toggle {
-    cursor: pointer;
-    /* width: 20%; */
-    text-align: center;
-    padding: 0.85em 2.25em 0.85em 1em;
-    background-color: rgba(162, 57, 57, 0.05);
-    border: 1px solid rgba(0, 0, 0, 0.1);
-  }
-  .tasks__item {
-    display: flex;
-    /* align-items: top; */
-  }
-  /* .list-style{
-    list-style-type:square;
-  } */
-  .tasks__item__toggle:hover {
-    background-color: rgba(0, 0, 0, 0.1);
-    border-color: rgba(0, 0, 0, 0.15);
-  }
-  .tasks__item__toggle--completed {
-    text-decoration: line-through;
-    color:red;
-    background-color: rgba(0, 128, 0, 0.15);
-    border-color: rgba(0, 128, 0, 0.2);
-  }
-  .tasks__item__toggle {
-    cursor: pointer;
-    width: 100%;
-    text-align: left;
-    padding: 0.85em 2.25em 0.85em 1em;
-    background-color: rgba(0, 0, 0, 0.05);
-    border: 1px solid rgba(0, 0, 0, 0.1);
-  }
-  button.tasks__item__remove {
-    top: 50%;
-    right: 0;
-    height: 100%;
-    /* background-color: red; */
-    /* transform: translateY(-50%); */
-    /* padding: 0.85em 2.25em 0.85em 1em; */
-    font-size: 100%;
-    margin: 0;
-  }
+  cursor: pointer;
+  /* width: 20%; */
+  margin:0;
+  text-align: center;
+  padding: 0.85em 2.25em 0.85em 1em;
+  background-color: rgba(162, 57, 57, 0.05);
+  border: 1px solid rgba(0, 0, 0, 0.1);
+}
+.tasks__item {
+  display: grid;
+  grid-template-columns: 80% auto;
+  width: 100%;
+  align-items: center;
+  justify-content: space-between;
+  padding: 1rem;
+  /* align-items: top; */
+}
+
+.task-item__title{
+  margin:0;
+  display: inline-block;
+  width: 100%;
+  text-align: left;
+}
+.task-item__dot{
+  width: 1rem;
+  height: 1rem;
+  border-radius: 50%;
+  background-color: black;
+
+}
+
+.tasks__item__toggle:hover {
+  background-color: rgba(0, 0, 0, 0.1);
+  border-color: rgba(0, 0, 0, 0.15);
+}
+.tasks__item__toggle--completed {
+  text-decoration: line-through;
+  color:red;
+  /* background-color: rgba(0, 128, 0, 0.15);
+  border-color: rgba(0, 128, 0, 0.2); */
+  margin:0;
+}
+.tasks__item__toggle {
+  cursor: pointer;
+  width: 100%;
+  text-align: center;
+  /* padding: 0.85em 2.25em 0.85em 1em; */
+  background-color: rgba(0, 0, 0, 0.05);
+  border: 1px solid rgba(0, 0, 0, 0.1);
+}
+button.tasks__item__remove {
+  top: 50%;
+  right: 0;
+  height: 100%;
+  /* background-color: red; */
+  /* transform: translateY(-50%); */
+  /* padding: 0.85em 2.25em 0.85em 1em; */
+  font-size: 100%;
+  margin: 0;
+}
+.chores-to-do{
+  box-shadow: 1px 1px 6px 1px gray;
+  border-radius: 5px;
+
+}
+.chore-to-do__list{
+  list-style: square;
+
+
+}
