--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -1,22 +1,22 @@
 .nav-list-style-type { 
-    /* border: dashed; */
-    list-style-type: none;
+    list-style: none;
     display: flex; 
-    /* flex-direction: row; */
-    justify-content:right;
-     /* margin-top: 15px; */
-    margin-bottom: 10px;
-    /* margin-right: 20px; */
-    column-gap:20px;
+    align-items: center;
+    justify-content: space-between;
+    margin: 0 !important;
 
 }
 .link{
+    display: inline-block;
     color:black;
     font-size: large;
+    padding:0 1rem;
+    
     
 }
-/* 
-h2 {
-    border: dashed; 
-} */
+.link:hover{
+    color:white;
+    text-decoration: none;
+}
+
 
