--- a/src/components/NewChoreForm.css
+++ b/src/components/NewChoreForm.css
@@ -3,14 +3,27 @@
     font-weight: 500;
 }
 .my-form{
-   
-    margin-top: 20px;
-    margin-right: 30px;
     background-color: rgba(255, 255, 255, 0.273);
+    box-shadow: 1px 1px 6px 1px gray;
 
 }
 .my-form label{
-    /* display:list-item; */
     display:block;
- 
+}
+
+.my-form__btn{
+    grid-area: "button";
+
+}
+.my-form__elements{
+    display: grid;
+    grid-template-columns: 8rem auto;
+    align-items: center;
+    justify-items: center;
+    row-gap: 1rem;
+
+}
+.my-form__elements input{
+    width: 80%;
+    
 }
