--- a/src/components/SignInForm.css
+++ b/src/components/SignInForm.css
@@ -1,4 +1,4 @@
-.btn-signInForm button {
+/* .btn-signInForm button {
   
   background-color:rgb(120, 148, 71);
     color: white;
@@ -10,8 +10,8 @@
     text-align: center;
     margin-top: 20px;
     font-weight: bold;
-  }
-  .btn-signInForm button:hover{
+  } */
+  /* .btn-signInForm button:hover{
     background: rgb(108, 124, 80);
     color:white;
     border: 2px solid white;
@@ -19,4 +19,15 @@
 }
 .password label{
   font-weight:800;
+} */
+button {
+  background-color:darkolivegreen;
+  color: white;
+  padding: 16px 20px;
+  border: none;
+  cursor: pointer;
+  width: 100px;
+  border-radius: 5px;
+  text-align: center;
+  margin-top: 20px;
 }
