--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,33 +1,48 @@
 .homeContainer {
     display:grid;
-    grid-template-columns:3fr 2fr ;
+    grid-template-columns:auto 40rem;
     align-items: start;
     justify-items: start;
     padding: 5rem 2rem;
+    margin-top: 2rem;
+    
 }
 
 .nav {
     background-color: rgb(128, 151, 89);
-    /* border:dashed; */
+    width: 100%;
+    position: fixed;
+    top: 0;
+    left:0;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 1rem;
-    
+    padding: 1rem;   
 
 }
 
 .layout {
     width: 100%;
-    
     justify-self: end;
 } 
-.layout p{
+
+.layout__title{
+    padding:1rem;
+    color:black;
     display: inline-block;
     width: 50%;
     margin:0;
     margin:0 0 1rem 0;
+    box-shadow: 2px 2px 6px 2px gray;
+    border-radius: 5px;
+
 }
+.layout__title:hover{
+    color : darkolivegreen;
+    text-decoration: none;
+}
+
+
 
 .choreList {
     grid-row: 2/4;
@@ -43,7 +58,6 @@
 
 .welcome{
     background-color: rgb(128, 151, 89);
-    /* border:dashed; */
     grid-row: 1/2;
     grid-column: 1/3;
     text-align: left;
@@ -53,5 +67,4 @@
 .choresToDo {
     grid-row: 3/4;
     grid-column: 3/4;
-    /* margin-bottom: 150px; */
 }
